=== (In Git)

* Enhancements:
  * Upgraded rb-readline to version 0.4.0

=== 2010-12-25

* Enhancements:
  * Upgraded Ruby 1.8.7 to patchlevel 330
  * Upgraded Ruby 1.9.2 to patchlevel 136
  * Build all versions of Ruby using GCC 4.5.1 (TDM-1 release)
  * Discourage users to attempt installing Ruby into Program Files. GH-34

=== 2010-08-18

* Enhancements:
  * Upgraded Ruby 1.9.2 to final (p0)
  * Speed up compilation process (reduce copy over copy)
  * Usage of extracted devkit to compile everything

=== Final / 2010-06-06

* Enhancements:
  * Installers now record version information in the registry [jonforums]
  * Increase file descriptors for 1.8.x based compilations. Fixes #27465.
  * Upgraded ZLib to 1.2.5
  * Upgraded OpenSSL to 0.9.8n
  * Upgraded RubyGems to 1.3.7

=== rc2 / 2010-02-07

* Enhancements:
  * Improved silent installations [jonforums]
  * Lowered privileges (high UAC will no longer prompt unless forced)
  * Upgraded Ruby 1.9.1 to patchlevel 378.
  * Upgraded Ruby 1.8.6 to patchlevel 398.

* Bugfixes:
  * Modify and cleanup File associations properly for non-admins

=== rc1 / 2009-11-10

* Enhancements:
  * Upgraded pure-ruby Readline to 0.2.0
  * Bundle OpenSSL 0.9.8k in cooperative mode (MSVCRT build) [snaury]
  * Installers now offer option to modify PATH [jonforums]
  * Installers now register file association [jonforums]
  * Installers that you can trust: shipping now signed

=== preview2 / 2009-08-16

* New features:
  * Bundles Core and Standard Library documentation as CHM.
    Feature Request #16782 [vertiginous]
  * Bundles The Book of Ruby. Courtesy of Huw Collingbourne.

* Enhancements:
  * Upgraded RubyGems version to 1.3.5

* Bugfixes:
  * Installers no longer require admin rights. Fixes #26474
  * Give priority to Ruby in the PATH. Fixes #26534

=== preview1 / 2009-06-28

* Released