@@ -2,6 +2,7 @@
 
 * Enhancements:
   * Upgraded rb-readline to version 0.4.0
+  * Upgraded RubyGems to 1.5.0 for Ruby 1.8.x
 
 === 2010-12-25
 
